fix: fix style wrap

--- a/UserVoiceShow/src/styles/index.css
+++ b/UserVoiceShow/src/styles/index.css
@@ -5,6 +5,7 @@
     color: #fff !important;
     font-size: 16px !important;
     border-radius: 7px;
+    white-space: pre-wrap;
 }
 
 .voiceChannelField:hover {
